@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static char libbk__rcsid[] = "$Id: b_string.c,v 1.1 2001/07/09 07:08:18 jtt Exp $";
+static char libbk__rcsid[] = "$Id: b_string.c,v 1.2 2001/08/16 21:10:48 seth Exp $";
 static char libbk__copyright[] = "Copyright (c) 2001";
 static char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -19,6 +19,8 @@ static char libbk__contact[] = "<projectbaka@baka.org>";
 #include <libbk.h>
 #include "libbk_internal.h"
 
+
+
 /*
  * Hash a string
  *	
@@ -27,25 +29,27 @@ static char libbk__contact[] = "<projectbaka@baka.org>";
  * Note we may not be applying modulus in this function since this is
  * normally used by CLC functions, CLC will supply its own modulus and
  * it is bad voodoo to double modulus if the moduluses are different.
- *
- * Shamelessly stolen by jtt from code writen by Ugen.
  */
 u_int 
-bk_strhash(char *a)
+bk_strhash(char *a, bk_flags flags)
 {
   const u_int M = (unsigned)37U;		/* Multiplier */
-#ifdef MODULUS_IN_BK
   const u_int P = (unsigned)2147486459U;	/* Arbitrary large prime */
-#endif /* MODULUS_IN_BK */
   u_int h;
 
   for (h = 0; *a; a++)
     h = h * M + *a;
 
-#ifdef MODULUS_IN_BK
-  return(h % P);
-#else /* MODULUS_IN_BK */
-  return(h);
-#endif /* MODULUS_IN_BK */
+  if (flags & BK_STRHASH_NOMODULUS)
+    return(h);
+  else
+    return(h % P);
 }
 
+
+
+/* printbuf info
+ * size + (n/16) * (prefix+61) + strlen(intro) + 10
+ * AAA 1234 5678 1234 5678 1234 5678 1234 5678 0123456789abcdef
+ *
+ */
